Added Frontend using HTML & JS to make API calls

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                 const data = await response.json();
 
                 // Display the fetched data in the result container
-                document.getElementById('resultContainer').innerHTML = JSON.stringify(data, null, 2);
+                // document.getElementById('resultContainer').innerHTML = JSON.stringify(data, null, 2);
                 // Display the fetched data in an organized manner
                 renderData(data);
             } catch (error) {
